# GOESP

./: .gitattributes  .gitignore  CMakeLists.txt  GOESP.sln  LICENSE  README.md
.github/workflows/: linux.yml  macos.yml  main.yml  windows.yml
GOESP/: Config.cpp  Config.h  ConfigStructs.cpp  ConfigStructs.h  ESP.cpp  ESP.h  EventListener.cpp  GOESP.vcxproj  GOESP.vcxproj.filters  GUI.cpp  GUI.h  GameData.cpp  GameData.h  Helpers.cpp  Helpers.h  Hooks.cpp  Hooks.h  ImGuiCustom.cpp  ImGuiCustom.h  Interfaces.cpp  Interfaces.h  Memory.cpp  Memory.h  Netvars.cpp  Netvars.h  PostProcessing.cpp  PostProcessing.h  Sound.h  dllmain.cpp  pch.h
GOESP/Hacks/: ESP.cpp  ESP.h  Misc.cpp  Misc.h
GOESP/Linux/: LinuxFile.h  LinuxFileMap.h
GOESP/Resources/: Resource.h  avatar_ct.h  avatar_tt.h  skillgroups.h
GOESP/Resources/Shaders/: blur.glsl  blur_x.glsl  blur_x.h  blur_x.hlsl  blur_y.glsl  blur_y.h  blur_y.hlsl  chromatic_aberration.glsl  chromatic_aberration.h  chromatic_aberration.hlsl  default_vs.h  monochrome.glsl  monochrome.h  monochrome.hlsl
GOESP/SDK/: CallingConvention.h  ClassId.h  Client.h  ClientClass.h  ClientTools.h  ConVar.h  Cvar.h  DebugOverlay.h  Engine.h  EngineTrace.h  Entity.cpp  Entity.h  EntityList.h  GameEvent.h  GlobalVars.h  InputSystem.h  ItemSchema.h  LocalPlayer.h  Localize.h  Matrix3x4.h  ModelInfo.h  Pad.h  Platform.h  PlayerResource.h  Recv.h  Sound.h  Steam.h  Utils.h  UtlVector.h  Vector.h  VirtualMethod.h  WeaponData.h  WeaponId.h  WeaponInfo.h  WeaponSystem.h
GOESP/freetype/: CMakeLists.txt
GOESP/freetype/freetype/config/: ftmodule.h  ftoption.h
GOESP/freetype/src/base/: ftrfork.c
GOESP/freetype/src/psaux/: afmparse.c
GOESP/freetype/src/sfnt/: sfwoff.c  sfwoff2.c
GOESP/freetype/src/type1/: t1afm.c
GOESP/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_win32.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_truetype.h
Tests/: CMakeLists.txt  MemoryTests.cpp
